--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "is-module": "1",
     "es6-module-jstransform": "0",
     "jade": "1",
+    "clean-css": "2",
+    "uglify-js": "2",
     "marked": "0",
     "react-tools": "0"
   },
