--- a/package.json
+++ b/package.json
@@ -21,10 +21,16 @@
     "clean-css": "2",
     "uglify-js": "2",
     "marked": "0",
-    "react-tools": "0"
+    "react-tools": "0",
+    "rework": "0",
+    "rework-calc": "0",
+    "rework-color-function": "1",
+    "rework-font-variant": "0",
+    "rework-hex-alpha": "1"
   },
   "devDependencies": {
     "co": "3",
+    "co-fs": "*",
     "mocha": "^1.17",
     "should": "^3.0.0"
   },
