--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "clean-css": "2",
     "uglify-js": "2",
     "marked": "0",
-    "react-tools": "0"
+    "react-tools": "0",
+    "coffee-script": "1"
   },
   "devDependencies": {
     "co": "3",
