--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "marked": "0",
     "react-tools": "0",
     "coffee-script": "1",
-    "less": "1"
+    "less": "1",
+    "node-sass": "0"
   },
   "devDependencies": {
     "co": "3",
