--- a/package.json
+++ b/package.json
@@ -13,10 +13,14 @@
   "dependencies": {
     "debug": "*",
     "composition": "1",
+
     "normalize-log": "0",
     "normalize-walker": "0",
+
     "is-module": "1",
+    "jstransform": "6",
     "es6-module-jstransform": "0",
+
     "autoprefixer": "2",
     "clean-css": "2",
     "uglify-js": "2"
@@ -30,6 +34,7 @@
     "less": "1",
     "node-sass": "0",
     "stylus": "0",
+    
     "co": "3",
     "co-fs": "1",
     "mocha": "1",
