--- a/package.json
+++ b/package.json
@@ -45,13 +45,19 @@
     "less": "1",
     "node-sass": "0",
     "stylus": "0",
+
     "co": "3",
     "co-fs": "1",
+    
     "mocha": "1",
-    "should": "3"
+    "should": "3",
+    "istanbul-harmony": "0"
   },
   "main": "lib",
   "scripts": {
-    "test": "mocha --harmony-generators --reporter spec --require should --bail"
-  }
+    "test": "mocha --harmony-generators --reporter spec --require should --bail",
+    "test-cov": "node --harmony-generators node_modules/.bin/istanbul cover node_modules/mocha/bin/_mocha -- --reporter dot --require should",
+    "test-travis": "node --harmony-generators node_modules/.bin/istanbul cover node_modules/mocha/bin/_mocha --report lcovonly -- --reporter dot --require should"
+  },
+  "files": ["lib"]
 }
