switch to deps-walk

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "normalize-transforms",
-  "description": "Transforms for normalize-walker",
+  "description": "Normalize's default transforms via deps-walk",
   "version": "1.0.1",
   "author": {
     "name": "Jonathan Ong",
@@ -15,9 +15,8 @@
     "type-is": "1",
     "mime-types": "1",
     "composition": "1",
-    "comment-shebang": "1",
     "normalize-log": "1",
-    "normalize-walker": "1"
+    "deps-walk": "1"
   },
   "devDependencies": {
     "jade": "1",
